# protocol-codegen

./: .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  fix_imports.sh  pyproject.toml  test_imports.py  tmpclaude-2330-cwd
MEMORY/: 00-SUIVI-GLOBAL.md  PHASE-01-ENUMFIELD.md  PHASE-02-DEPRECATED-DIRECTION.md  PHASE-02B-SYMMETRY-FIX.md  PHASE-03-TESTS-COMPILATION.md
docs/: ARCHITECTURE_REFACTORING_PLAN.md  INSTRUCTIONS.md  MIGRATION_PLAN_MIXIN_ARCHITECTURE.md
examples/: README.md
examples/simple-sensor-network/: README.md  generate.ps1  generate.sh  plugin_paths.py  protocol_config.py  protocol_config_binary.py  protocol_config_serial8.py
examples/simple-sensor-network/field/: color.py  enums.py  network.py  sensor.py
examples/simple-sensor-network/message/: __init__.py  network.py  sensor.py  system.py
src/protocol_codegen/: cli.py
src/protocol_codegen/core/: __init__.py  enum_def.py  enums.py  field.py  field.pyi  file_utils.py  message.py  plugin_types.py  stub_generator.py  types.py
src/protocol_codegen/methods/: __init__.py  base_generator.py  protocol_components.py
tests/: __init__.py  conftest.py  test_allocator.py  test_cli.py  test_encoding_strategy.py  test_enum_def.py  test_enum_generator.py  test_field.py  test_file_utils.py  test_loader.py  test_message.py  test_method_generator.py  test_payload_calculator.py  test_validator.py
tests/generators/: __init__.py
tests/generators/backends/: test_backend_factory.py  test_cpp_backend.py  test_java_backend.py
tests/generators/languages/: __init__.py  test_backend_factory.py  (+2 more)
(+239 files in other folders)
