[project]
name = "protocol-codegen"
version = "1.0.0"
description = "Generic bidirectional protocol code generator"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.1.0",
]

[project.scripts]
protocol-codegen = "protocol_codegen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protocol_codegen"]

[tool.mypy]
python_version = "3.11"
strict = true
